[package]
name = "tn_fnds_PBR"
version = "0.1.0"
edition = "2024"

[dependencies]
hound = "3.5.1"
libm = "0.2.11"
ndarray = "0.16.1"
ndrustfft = "0.5.0"

[profile.release]
incremental = false      # Bueno para builds finales, evita caché incremental
overflow-checks = false  # Mejor rendimiento (asume que has testeado bien tu código)
strip = "symbols"        # Más agresivo que solo 'true', elimina más símbolos
opt-level = "z"          # Optimiza para tamaño (alternativa: "s" para más equilibrio)
lto = "fat"              # Bueno para optimización entre crates
codegen-units = 1        # Mejor optimización (compilación más lenta)
panic = "abort"          # Elimina infraestructura de unwinding
debug = false            # Asegura que no hay información de debug
#codegen-backend = "llvm" # Usa el backend más maduro (necesita Rust nightly)

# Configuraciones específicas para dependencias
[profile.release.package."*"]
opt-level = 3           # Máxima optimización para dependencias
incremental = false
codegen-units = 1
strip = true

