[package]
name = "tn_fnds_PBR"
version = "0.1.0"
edition = "2024"

[dependencies]
hound = "3.5.1"
libm = "0.2.11"
ndarray = "0.16.1"
ndrustfft = "0.5.0"

[profile.release]
incremental = false # Good for final builds, avoids incremental caching
overflow-checks = false # Better performance (assumes you've tested your code well)
strip = "symbols" # More aggressive than just 'true', removes more symbols
opt-level = "z" # Optimizes for size (alternative: "s" for more balance)
lto = "fat" # Good for cross-crate optimization
codegen-units = 1 # Better optimization (slower compilation)
panic = "abort" # Removes unwinding infrastructure
debug = false # Ensures no debug information
#codegen-backend = "llvm" # Use the most mature backend (needs Rust nightly)

# Dependency-specific settings
[profile.release.package."*"]
opt-level = 3 # Maximum dependency optimization
incremental = false
codegen-units = 1
strip = true

